--- a/plugins/gatsby-source-nytimes-covid-19/package.json
+++ b/plugins/gatsby-source-nytimes-covid-19/package.json
@@ -1,12 +1,15 @@
 {
   "name": "gatsby-source-nytimes-covid-19",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Tyler Sargent <tsargent@gmail.com>",
+  "license": "ISC",
+  "dependencies": {
+    "csvtojson": "^2.0.10"
+  }
 }
